refactor: refact getPostRealEmojiMembers code